# video2blog

./: .gitignore  .npmrc  README.md  electron-builder.json5  index.html  package-lock.json  package.json  pnpm-lock.yaml  test.md  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
command/: dIyQl99oxlg.zh-Hans.vtt  database.sqlite3  mAUpxN-EIgU.en.vtt
electron/: electron-env.d.ts  main.ts  sqlHelper.ts  sqlite3.ts  utils.ts
python/: RemoveDuplicateImages.py  RemoveDuplicateImages.spec  cv.py  funASR.py  lrc.py  main.py  pyproject.toml  requirements.txt
python-test/: main.py  test.py
python/RemoveDuplicateImages/: main.py  requirements.txt
python/Whisper/: Whisper.exe.spec  requirements.txt
python/whisper/: main.py
src/: App.vue  main.ts  sqlite3.ts  style.css  vite-env.d.ts
src/router/: index.ts
src/utils/: index.ts  request.ts
src/views/home/: index.vue  main copy.vue  main.vue
src/views/home/components/: ai-modal.vue  flashing-button.vue  imagelist-modal.vue  mouseright-menu.vue  prompt-modal.vue  qrcode-modal.vue  systemset-drawer.vue  whisper-modal.vue  whisperconvert-modal.vue
src/views/mine/: index.vue
src/views/short/: index.vue
